fix details overlay dark z-index

--- a/src/utilities/_details.scss
+++ b/src/utilities/_details.scss
@@ -9,7 +9,7 @@
 }
 
 .details-overlay-dark[open] > summary::before {
-  z-index: 111;
+  z-index: z(details-overlay-dark);
   background: var(--color-canvas-overlay);
 }
 
