--- a/src/variables/_layout.scss
+++ b/src/variables/_layout.scss
@@ -62,5 +62,6 @@ $z-index: (
   flash: 910,
   sidebar-overlay: 950,
   sidebar: 1000,
+  details-overlay-dark: 1050,
   toast: 1100,
 );
